02-25-25: Spell Parser Update
          Updated the spell parser for mage/shaman spellcasting. The parser
          now requires a unique match for spells. You might notice you have 
          to give it a bit more.
          For instance: 'cast d i' used to match detect invisibility but now
          requires you to type 'cast de i' to disambiguate it from 
          dispel invisibility

02-10-25: Summoning group members now ignores summon immunity

02-09-25: Protection Spell Rework
          Protection spells are now instant cast, short duration group buffs.
          This should change their use from fire and forget buffs to something
          a mages uses right before a fight or in response to a spell being cast.
          - Protection from Elements renamed to protection from energy and now
            provides immunity to energy
          - Protection from water now provides cold immunity as well as water
          - Protection from Air now provides electricity immunity as well as Air
          - All protection spells moved from the mage disc to early in advanced
            disciplines

02-01-25: Updates to mage fire spells
          - Inferno moved to earlier in the fire disc
          - Inferno added a short duration fire immunity debuff
          - New spell: Lava Lance. High damage near the end of the fire disc

05-30-24: The whittle skill has been fixed and should now be usable again, at
          least to whatever extent it was last time it worked.

05-29-24: Prop item loads have been added, so they should start appearing
          in The World more over time. Currently only three zones feature them:
          Gnomish Wonders, Tsirin Prison, and Upper Cimea. And yes, that means
          everyone's favorite backstabber is anxiously awaiting his first victims.

          Prop items are exactly the same as the normal version of an item,
          except they can't be rented or sold and decay after about 8 real-life
          hours.
