@@ -678,7 +678,7 @@ void buildSpellArray() {
   discArray[SPELL_EYES_OF_FERTUMAN] =
     new spellInfo(SPELL_MAGE, DISC_MAGE, DISC_ALCHEMY, STAT_EXT,
       "eyes of Fertuman", TASK_EASY, LAG_1, POSITION_CRAWLING, MANA_30,
-      LIFEFORCE_0, PRAY_0, TAR_CHAR_ROOM | TAR_FIGHT_SELF, SYMBOL_STRESS_0, "",
+      LIFEFORCE_0, PRAY_0, TAR_NAME, SYMBOL_STRESS_0, "",
       "", "", "", START_65, LEARN_13, START_DO_50, LEARN_DO_5, START_DO_NO,
       LEARN_DO_NO, LEARN_DIFF_SPELLS, 0.0,
       COMP_GESTURAL | COMP_GESTURAL_RANDOM | COMP_VERBAL | COMP_VERBAL_RANDOM |
