@@ -2285,7 +2285,7 @@ int TBeing::doSpellCast(TBeing* caster, TBeing* victim, TObj* o, TRoom* room,
         rc = castDivinationBeing(this, victim);
       break;
     case SPELL_EYES_OF_FERTUMAN:
-      rc = castEyesOfFertuman(this, victim);
+      rc = castEyesOfFertuman(this, orgArg);
       break;
     case SPELL_POWERSTONE:
       rc = castPowerstone(this, o);
